fix: game background contain to prevent cropping

--- a/src/components/GameScreen.css
+++ b/src/components/GameScreen.css
@@ -16,8 +16,10 @@
   width: 100%;
   height: 100%;
   background-image: url('/images/interrogation-room.png');
-  background-size: cover;
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
+  background-color: #000;
   filter: brightness(0.4);
 }
 
